Fix for dark mode
- Improved styling in dark mode.

--- a/src/Blockcore.Website/ClientApp/src/styles.css
+++ b/src/Blockcore.Website/ClientApp/src/styles.css
@@ -129,7 +129,7 @@ a:hover {
 }
 
 .dark .link:hover:before {
-  color: #0c49dc;
+  background: #0c49dc;
 }
 
 .logo {
@@ -259,6 +259,16 @@ ul {
 }
 
 .link-active .nav-link {
+  text-decoration: none;
+  color: #2e2e2e;
+}
+
+.nav-link:hover {
+  text-decoration: none;
+  color: #2e2e2e;
+}
+
+.dark .nav-link:hover {
   text-decoration: none;
   color: #2e2e2e;
 }
